3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/c_object.c: missing ;
server/login.c: wrong function call.
---
lib/races: remove obsolete player races.
lib/treasures: remove lists put into individual .trs files.
Nicolas Weeger 2007-03-17

types/Makefile.am: Build object files in their own directories instead of in types/
---
server/login.c: Make error messages for invalid usernames more useful.
---
server/c_object.c: Change examine to use "Those are" instead of "That is" for
   more than one object.
Alex Schultz 2007-03-16

Apply patch #1660388: Code-cleanup: () -> (void) courtesy Stefan Huehner.
 server/timers.c weather.c ob_methods.c
 test/unit/common/stubs_common.c
 test/unit/crossedit/stubs_crossedit.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c
 test/toolkit/toolkit_common.c
 common/init.c treasure.c
 crossedit/stubs.c
 types/altar/altar.c
 types/arrow/arrow.c
 types/book/book.c
 types/button/button.c
 types/check_inv/check_inv.c
 types/container/container.c
 types/converter/converter.c
 types/deep_swamp/deep_swamp.c
 types/director/director.c
 types/exit/exit.c
 types/hole/hole.c
 types/identify_altar/identify_altar.c
 types/item_transformer/item_transformer.c
 types/pedestal/pedestal.c
 types/player_mover/player_mover.c
 types/power_crystal/power_crystal.c
 types/rune/rune.c
 types/shop_mat/shop_mat.c
 types/sign/sign.c
 types/spell_effect/spell_effect.c
 types/spinner/spinner.c
 types/thrown_object/thrown_object.c
 types/transport/transport.c
 types/trap/trap.c
 types/trapdoor/trapdoor.c
 types/trigger/trigger.c
 types/trigger_altar/trigger_altar.c
 types/trigger_button/trigger_button.c
 types/trigger_pedestal/trigger_pedestal.c